--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
         bottom: calc(6.125em*1.5 + 3em);
         left: 0px;
         right: 0px;
-        margin-left: calc(2.063em*1.5);
-        margin-bottom: calc(6px*2);
+        margin-left: calc(44.063em*1.5);
+        margin-bottom: calc(10px*4);
         background-color: {color:Menu background};
         color: {color:Menu text};
         border: 0.375em solid {color:Menu border};
@@ -215,8 +215,8 @@
         bottom: 3em;
         left: 0px;
         right: 0px;
-        margin-left: calc(2.063em*1.5);
-        margin-bottom: 0px;
+        margin-left: calc(44.063em*1.5);
+        margin-bottom: 542px;
         background-color: {color:Menu background};
         color: {color:Menu text};
         border: 0.375em solid {color:Menu border};
@@ -234,7 +234,7 @@
         width: calc(334px*1.5);
         height: calc(350px*1.5);
         bottom: calc((18px*2.5) + 48px);
-        left: calc((8.125em*1.5) + (14px*2));
+        left: calc((26.125em*1.5) + (14px*2));
         right: 0px;
         margin-left: calc(2.063em*1.5);
         margin-bottom: 0px;
@@ -255,7 +255,7 @@
         width: calc(334px*1.5);
         height: calc(350px*1.5);
         bottom: calc((18px*2.5) + 48px);
-        left: calc((8.125em*1.5) + (14px*2));
+        left: calc((26.125em*1.5) + (14px*2));
         right: 0px;
         margin-left: calc(2.063em*1.5);
         margin-bottom: 0px;
@@ -276,7 +276,7 @@
         width: calc(334px*1.5);
         height: calc(350px*1.5);
         bottom: calc((18px*2.5) + 48px);
-        left: calc((8.125em*1.5) + (14px*2));
+        left: calc((26.125em*1.5) + (14px*2));
         right: 0px;
         margin-left: calc(2.063em*1.5);
         margin-bottom: 0px;
@@ -294,8 +294,8 @@
     .sidebar-list-inner {
         font-family: '8bitoperator', Consolas;
         font-size: calc(18px*2);
-        padding-top: 9px;
-        padding-bottom: 9px;
+        padding-top: 5px;
+        padding-bottom: 5px;
         text-align: left;
     }
     
@@ -324,7 +324,7 @@
     }
     
     .post-block {
-        width: 600px;
+        width: 620px;
         min-height: 140px;
         font-size: calc(1.125em *1.5);
     }
@@ -336,8 +336,9 @@
         border: 0.375em solid {color:Post border};
         padding-left: calc(22px*2);
         padding-top: calc(22px*1.5);
-        padding-right: calc(28px*2.5);
+        padding-right: calc(22px*1.5);
         padding-bottom: calc(22px*1.5);
+        margin-left: calc(-90px*2);
         margin-bottom: calc(6px*2);
         font-size: 12px !important;
     }
@@ -445,27 +446,27 @@
     <div class="container">
         <div id="sidebar-top">
             <p class="sidebar-list" id="item">
-                <a href="javascript:void(0)" class=""><img src="http://i.imgur.com/TjQqx1n.png" alt="" class="sidebar-heart">ITEM</a>
+                <a href="javascript:void(0)" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart">NAV</a>
             </p>
             <p class="sidebar-list" id="stat">
-                <a href="javascript:void(0)" class=""><img src="http://i.imgur.com/TjQqx1n.png" alt="" class="sidebar-heart">STAT</a>
+                <a href="javascript:void(0)" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart">ABOUT</a>
             </p>
             <p class="sidebar-list" id="cell">
-                <a href="javascript:void(0)" class=""><img src="http://i.imgur.com/TjQqx1n.png" alt="" class="sidebar-heart">CELL</a>
+                <a href="javascript:void(0)" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart">LINKS</a>
             </p>
         </div>
         <div id="item-menu">
             {block:HasPages} {block:Pages}
             <p class="sidebar-list-inner">
-                <a href="{URL}" class=""><img src="http://i.imgur.com/TjQqx1n.png" alt="" class="sidebar-heart">{Label}</a>
+                <a href="{URL}" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart">{Label}</a>
             </p>
             {/block:Pages} {/block:HasPages} {block:AskEnabled}
             <p class="sidebar-list-inner">
-                <a href="{BlogURL}ask" class=""><img src="http://i.imgur.com/TjQqx1n.png" alt="" class="sidebar-heart">{AskLabel}</a>
+                <a href="{BlogURL}ask" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart">{AskLabel}</a>
             </p>
             {/block:AskEnabled} {block:SubmissionsEnabled}
             <p class="sidebar-list-inner">
-                <a href="{BlogURL}submit" class=""><img src="http://i.imgur.com/TjQqx1n.png" alt="" class="sidebar-heart">{SubmitLabel}</a>
+                <a href="{BlogURL}submit" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart">{SubmitLabel}</a>
             </p> {/block:SubmissionsEnabled}
         </div>
         <div id="stat-menu">
@@ -526,16 +527,19 @@
             <!-- seriously don't though <3 -->
 
             <p class="sidebar-list-inner">
-                <a href="http://undertale.com" class=""><img src="http://i.imgur.com/TjQqx1n.png" alt="" class="sidebar-heart"><small>Undertale &copy; Toby Fox</small></a>
+                <a href="http://undertale.com" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart"><small>Undertale &copy; Toby Fox</small></a>
             </p>
             <p class="sidebar-list-inner">
-                <a href="http://tumblr.thattacoguy.net" class=""><img src="http://i.imgur.com/TjQqx1n.png" alt="" class="sidebar-heart"><small>Theme made by that_taco_guy</small></a>
+                <a href="http://tumblr.thattacoguy.net" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart"><small>Theme made by that_taco_guy</small></a>
             </p>
             <p class="sidebar-list-inner">
-                <a href="http://determination-theme.tumblr.com" class=""><img src="http://i.imgur.com/TjQqx1n.png" alt="" class="sidebar-heart">[THEME]</a>
+                <a href="http://determination-theme.tumblr.com" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart">[THEME]</a>
             </p>
             <p class="sidebar-list-inner">
-                <a href="https://github.com/thattacoguy/determination" class=""><img src="http://i.imgur.com/TjQqx1n.png" alt="" class="sidebar-heart">[SOURCE]</a>
+                <a href="https://github.com/thattacoguy/determination" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart">[ORIGINAL SOURCE]</a>
+            </p>
+            <p class="sidebar-list-inner">
+                <a href="https://github.com/emanresuyzal1/determination" class=""><img src="https://i.imgur.com/j4xjybx.png" alt="" class="sidebar-heart">[EDITED SOURCE]</a>
             </p>
         </div>
         <div id="sidebar-bottom">
@@ -543,7 +547,7 @@
                 {block:IfShowCustomUsername}
                 <p class="sidebar-title"><a href="{BlogURL}" style="color:{color:Menu text}">{text:Username}</a></p>
                 {/block:IfShowCustomUsername} {block:IfNotShowCustomUsername}
-                <p class="sidebar-title"><a href="{BlogURL}" style="color:{color:Menu text}">Player</a></p>
+                <p class="sidebar-title"><a href="{BlogURL}" style="color:{color:Menu text}">Varik</a></p>
                 {/block:IfNotShowCustomUsername} {block:IfShowCustomStats}
                 <table class="sidebar-menu">
                     <tr class="menu">
@@ -563,15 +567,15 @@
                 <table class="sidebar-menu">
                     <tr class="menu">
                         <td class="statsleft">LV</td>
-                        <td>1</td>
+                        <td>5</td>
                     </tr>
                     <tr class="menu">
                         <td class="statsleft">HP</td>
-                        <td>20/20</td>
+                        <td>36/36</td>
                     </tr>
                     <tr class="menu">
                         <td class="statsleft">G</td>
-                        <td>146</td>
+                        <td>0</td>
                     </tr>
                 </table>
                 {/block:IfNotShowCustomStats}
